#10495 코드 데이터 다국어 처리 - 코드 등록 화면 수정 -> MR 응대

--- a/src/main/resources/public/template/code/codeEdit.html
+++ b/src/main/resources/public/template/code/codeEdit.html
@@ -267,7 +267,7 @@
 
             const codeLangList = document.querySelectorAll('input[name=codeLangValue]');
             for (let i = 0; i < codeLangList.length; i++) {
-                if (codeLangList[i].value === "") {
+                if (codeLangList[i].value.trim() === "") {
                     aliceAlert.alertWarning(i18n.msg('code.msg.enterCodeLangValue'));
                     return false;
                 }
