1. 스크롤 사용하는 목록 수정 2. CI 검색 메뉴 초기 전체 데이터를 가져오는 문제 수정

--- a/src/main/resources/public/template/cmdb/ci/ciSearch.html
+++ b/src/main/resources/public/template/cmdb/ci/ciSearch.html
@@ -83,11 +83,14 @@
                             offsetCount = offsetCount + aliceJs.searchDataCount;
                         }
                         const ciTbody = document.querySelector('.list-body .os-content');
-                        const tempTb = document.createElement('table');
-                        tempTb.innerHTML = response.responseText;
-                        for (let i = 0; i < tempTb.rows.length; i++) {
-                            ciTbody.appendChild(tempTb.rows[i]);
+                        const tbody = document.createElement('tbody');
+                        tbody.innerHTML = response.responseText;
+                        const container = document.createDocumentFragment();
+                        for (let i = 0; i < tbody.rows.length; i++) {
+                            let node = tbody.rows[i].cloneNode(true);
+                            container.appendChild(node);
                         }
+                        ciTbody.appendChild(container)
                     } else {
                         if (url.indexOf("/view") > 0) {
                             const ciDetailModal = new modal({
