--- a/src/main/resources/public/template/chart/chartSearch.html
+++ b/src/main/resources/public/template/chart/chartSearch.html
@@ -94,12 +94,15 @@
                             offsetCount = offsetCount + aliceJs.searchDataCount;
                         }
                         const chartTbody = document.querySelector('.list-body .os-content');
-                        const tempTb = document.createElement('table');
-                        tempTb.innerHTML = response.responseText;
-                        setDateTimeFormat(tempTb);
-                        for (let i = 0; i < tempTb.rows.length; i++) {
-                            chartTbody.appendChild(tempTb.rows[i]);
+                        const tbody = document.createElement('tbody');
+                        tbody.innerHTML = response.responseText;
+                        setDateTimeFormat(tbody);
+                        const container = document.createDocumentFragment();
+                        for (let i = 0; i < tbody.rows.length; i++) {
+                            let node = tbody.rows[i].cloneNode(true);
+                            container.appendChild(node);
                         }
+                        chartTbody.appendChild(container)
                     } else {
                         document.getElementById('chartList').innerHTML = response.responseText;
                         aliceJs.showTotalCount(document.getElementById('totalCount').value);
